--- a/produk.html
+++ b/produk.html
@@ -2,55 +2,60 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daftar Barang</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.6.2/sql-wasm.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
-      background: white;
-      color: #000;
+      background: #fff;
     }
     h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .search-box {
-      text-align: center;
-      margin-bottom: 20px;
+      color: #222;
     }
     input[type="text"] {
-      padding: 10px;
-      width: 60%;
-      font-size: 1em;
-      border: 1px solid #aaa;
-      border-radius: 5px;
+      padding: 5px;
+      font-size: 14px;
+    }
+    button {
+      padding: 6px 12px;
+      border-radius: 6px;
+      border: 1px solid black;
+      background: navy;
+      color: white;
+      cursor: pointer;
+      margin-left: 5px;
+    }
+    button:hover {
+      opacity: 0.9;
     }
     table {
-      width: 100%;
+      margin-top: 20px;
       border-collapse: collapse;
-      margin-top: 10px;
+      width: 100%;
     }
     th, td {
-      border: 1px solid #ddd;
+      border: 1px solid #aaa;
       padding: 8px;
-      text-align: center;
+      text-align: left;
     }
     th {
-      background: #001f4d;
-      color: white;
+      background: #eee;
     }
-    tr:nth-child(even) {
-      background: #f9f9f9;
+    #pagination {
+      margin-top: 15px;
+    }
+    #pageInfo {
+      margin: 0 10px;
     }
   </style>
 </head>
 <body>
+
   <h1>Daftar Barang</h1>
 
-  <div class="search-box">
-    <input type="text" id="search" placeholder="Cari produk..." onkeyup="searchProducts()">
-  </div>
+  <input type="text" id="searchBox" placeholder="Cari produk..." />
+  <button onclick="searchProducts()">Cari</button>
 
   <table id="resultTable">
     <thead>
@@ -64,26 +69,50 @@
     <tbody></tbody>
   </table>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.6.2/sql-wasm.js"></script>
+  <div id="pagination">
+    <button onclick="changePage(-1)">Prev</button>
+    <span id="pageInfo">Page 1 of 1</span>
+    <button onclick="changePage(1)">Next</button>
+  </div>
+
   <script>
     let db;
+    let currentPage = 1;
+    const pageSize = 15;
+    let currentKeyword = "";
+    let totalPages = 1;
 
-    // Load the database
-    initSqlJs({ locateFile: file => `https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.6.2/${file}` })
-      .then(async SQL => {
-        const response = await fetch('data.db');
-        const buffer = await response.arrayBuffer();
-        db = new SQL.Database(new Uint8Array(buffer));
-        // Show first 5 products on load
-        displayProducts("");
-      });
+    // load DB
+    initSqlJs({ locateFile: file => "https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.6.2/sql-wasm.wasm" })
+      .then(SQL => fetch("data.db")
+        .then(res => res.arrayBuffer())
+        .then(buf => {
+          db = new SQL.Database(new Uint8Array(buf));
+          updateTotalPages();
+          displayProducts();
+        })
+      );
 
-    function searchProducts() {
-      const keyword = document.getElementById('search').value.trim();
-      displayProducts(keyword);
+    function updateTotalPages() {
+      let countQuery = "SELECT COUNT(*) as cnt FROM Product LEFT JOIN Stock ON Product.Id = Stock.ProductId";
+      let params = {};
+      if (currentKeyword) {
+        countQuery += " WHERE Product.Name LIKE $search";
+        params.$search = "%" + currentKeyword + "%";
+      }
+
+      const stmt = db.prepare(countQuery);
+      stmt.bind(params);
+      stmt.step();
+      const row = stmt.getAsObject();
+      totalPages = Math.max(1, Math.ceil(row.cnt / pageSize));
+      stmt.free();
     }
 
-    function displayProducts(keyword) {
+    function displayProducts(keyword = currentKeyword) {
+      currentKeyword = keyword;
+      updateTotalPages(); // refresh total pages with keyword filter
+
       const tbody = document.querySelector("#resultTable tbody");
       tbody.innerHTML = "";
 
@@ -99,7 +128,9 @@
         params.$search = "%" + keyword + "%";
       }
 
-      query += " LIMIT 5;";
+      query += " LIMIT $limit OFFSET $offset";
+      params.$limit = pageSize;
+      params.$offset = (currentPage - 1) * pageSize;
 
       try {
         const stmt = db.prepare(query);
@@ -116,15 +147,33 @@
           `;
           tbody.appendChild(tr);
         }
-
         stmt.free();
 
         if (tbody.children.length === 0) {
           tbody.innerHTML = `<tr><td colspan="4">Tidak ada hasil ditemukan</td></tr>`;
         }
+
+        document.getElementById("pageInfo").innerText = "Page " + currentPage + " of " + totalPages;
+
       } catch (err) {
         console.error(err);
         tbody.innerHTML = `<tr><td colspan="4">Error: ${err.message}</td></tr>`;
+      }
+    }
+
+    function searchProducts() {
+      currentPage = 1;
+      const keyword = document.getElementById("searchBox").value.trim();
+      displayProducts(keyword);
+    }
+
+    function changePage(direction) {
+      if (direction === -1 && currentPage > 1) {
+        currentPage--;
+        displayProducts();
+      } else if (direction === 1 && currentPage < totalPages) {
+        currentPage++;
+        displayProducts();
       }
     }
   </script>
