--- a/laporan-lampau.html
+++ b/laporan-lampau.html
@@ -25,12 +25,12 @@
       </div>
     </div>
 
-    <!-- Table -->
+    <!-- Table Transaksi -->
     <div class="overflow-x-auto bg-white rounded-xl shadow p-4 mb-6">
       <table class="min-w-full border-collapse">
         <thead>
           <tr class="bg-gray-100 text-left">
-            <th class="p-2 border-b">No.</th>
+            <th class="p-2 border-b">No. Nota</th>
             <th class="p-2 border-b">Total Belanja</th>
             <th class="p-2 border-b">Metode</th>
             <th class="p-2 border-b">Waktu</th>
@@ -40,12 +40,27 @@
       </table>
     </div>
 
+    <!-- Ringkasan -->
+    <div class="overflow-x-auto bg-white rounded-xl shadow p-4">
+      <h2 class="text-xl font-semibold mb-4">Ringkasan Transaksi</h2>
+      <table class="min-w-full border-collapse">
+        <thead>
+          <tr class="bg-gray-100 text-left">
+            <th class="p-2 border-b">Metode</th>
+            <th class="p-2 border-b">Total Transaksi</th>
+            <th class="p-2 border-b">Nominal (Rp)</th>
+          </tr>
+        </thead>
+        <tbody id="summary"></tbody>
+      </table>
+    </div>
+
   </div>
 
   <script>
-    const rowsPerPage = 15; // optional pagination
     let payments = [];
     let paymentTypes = [];
+    let paymentTypesMap = {};
 
     async function loadData() {
       try {
@@ -54,8 +69,6 @@
         payments = data.Payment || [];
         paymentTypes = data.PaymentType || [];
 
-        // map PaymentTypeId → Name
-        paymentTypesMap = {};
         paymentTypes.forEach(pt => paymentTypesMap[pt.Id] = pt.Name);
       } catch(err) {
         console.error("Error loading Transactions.json", err);
@@ -104,6 +117,35 @@
         tr.innerHTML = `<td class="p-2 border-b text-center" colspan="4">Tidak ada transaksi pada tanggal ini</td>`;
         tbody.appendChild(tr);
       }
+
+      renderSummary(filtered);
+    }
+
+    function renderSummary(filtered) {
+      const summaryData = { TOTAL: { count:0, total:0 } };
+      filtered.forEach(p => {
+        const method = paymentTypesMap[p.PaymentTypeId] || "Lainnya";
+        const amt = Number(p.Amount) || 0;
+        if(!summaryData[method]) summaryData[method] = { count:0, total:0 };
+        summaryData[method].count++;
+        summaryData[method].total += amt;
+
+        summaryData["TOTAL"].count++;
+        summaryData["TOTAL"].total += amt;
+      });
+
+      const sumBody = document.getElementById("summary");
+      sumBody.innerHTML = "";
+
+      Object.keys(summaryData).forEach(m => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td class="p-2 border-b font-semibold">${m}</td>
+          <td class="p-2 border-b">${summaryData[m].count}</td>
+          <td class="p-2 border-b">Rp ${summaryData[m].total.toLocaleString("id-ID")}</td>
+        `;
+        sumBody.appendChild(row);
+      });
     }
 
     document.getElementById("filterBtn").addEventListener("click", () => {
