--- a/laporan-realtime.html
+++ b/laporan-realtime.html
@@ -12,14 +12,13 @@
     <h1 class="text-3xl font-bold mb-2">Transaksi Hari Ini</h1>
     <p id="subtitle" class="text-gray-600 mb-6"></p>
 
-    <!-- Tabel transaksi -->
-    <div class="overflow-x-auto bg-white rounded-xl shadow p-4 mb-6">
+    <div class="overflow-x-auto bg-white rounded-xl shadow p-4">
       <table class="min-w-full border-collapse">
         <thead>
           <tr class="bg-gray-100 text-left">
             <th class="p-2 border-b">No. Nota</th>
             <th class="p-2 border-b">Total Belanja</th>
-            <th class="p-2 border-b">Metode</th>
+            <th class="p-2 border-b">Metode / Type</th>
             <th class="p-2 border-b">Waktu</th>
           </tr>
         </thead>
@@ -27,15 +26,13 @@
       </table>
     </div>
 
-    <!-- Tabel ringkasan -->
-    <div class="overflow-x-auto bg-white rounded-xl shadow p-4">
-      <h2 class="text-xl font-semibold mb-4">Ringkasan Transaksi</h2>
+    <!-- Summary Table -->
+    <div class="overflow-x-auto bg-white rounded-xl shadow p-4 mt-6">
       <table class="min-w-full border-collapse">
         <thead>
           <tr class="bg-gray-100 text-left">
-            <th class="p-2 border-b">Metode</th>
+            <th class="p-2 border-b">Metode / Type</th>
             <th class="p-2 border-b">Total Transaksi</th>
-            <th class="p-2 border-b">Nominal (Rp)</th>
           </tr>
         </thead>
         <tbody id="summary"></tbody>
@@ -61,66 +58,47 @@
         const res = await axios.get("Transactions.json");
         const data = res.data;
 
-        const payments = data.Payment || [];
-        const paymentTypes = data.PaymentType || [];
+        const payments = (data.Payment || []).map(p => ({...p, Type: "Payment"}));
+        const refunds = (data.Refund || []).map(r => ({...r, Type: "Refund", Amount: -r.Amount}));
+
+        const allTransactions = [...payments, ...refunds];
 
         // Build PaymentTypeId -> Name map
         const typeMap = {};
-        paymentTypes.forEach(pt => typeMap[pt.Id] = pt.Name);
+        (data.PaymentType || []).forEach(pt => typeMap[pt.Id] = pt.Name);
 
-        // --- Isi tabel transaksi ---
         const tbody = document.getElementById("transactions");
         tbody.innerHTML = "";
 
-        payments.forEach(p => {
+        allTransactions.sort((a,b) => new Date(a.DateCreated) - new Date(b.DateCreated));
+
+        allTransactions.forEach(p => {
           const tr = document.createElement("tr");
-
-          // ambil jam & menit dari DateCreated
-          const jsDate = new Date(p.DateCreated.replace(" ", "T"));
-          const jam = jsDate.getHours().toString().padStart(2, "0");
-          const menit = jsDate.getMinutes().toString().padStart(2, "0");
-
           tr.innerHTML = `
             <td class="p-2 border-b">${p.Id}</td>
             <td class="p-2 border-b">Rp ${Number(p.Amount).toLocaleString("id-ID")}</td>
-            <td class="p-2 border-b">${typeMap[p.PaymentTypeId] || "-"}</td>
-            <td class="p-2 border-b">${jam}:${menit}</td>
+            <td class="p-2 border-b">${p.Type === "Payment" ? (typeMap[p.PaymentTypeId] || "-") : "Refund"}</td>
+            <td class="p-2 border-b">${DateTime.fromISO(p.DateCreated, { zone: "Asia/Jakarta" }).toFormat("HH:mm")}</td>
           `;
           tbody.appendChild(tr);
         });
 
-        // --- Hitung ringkasan ---
-        const summaryData = {
-          "Cash": { count: 0, total: 0 },
-          "Hutang": { count: 0, total: 0 },
-          "Transfer": { count: 0, total: 0 },
-          "TOTAL": { count: 0, total: 0 }
-        };
-
-        payments.forEach(p => {
-          const method = typeMap[p.PaymentTypeId] || "Lainnya";
-          const amt = Number(p.Amount) || 0;
-
-          if (summaryData[method]) {
-            summaryData[method].count++;
-            summaryData[method].total += amt;
-          }
-          summaryData["TOTAL"].count++;
-          summaryData["TOTAL"].total += amt;
+        // Summary table
+        const summary = {};
+        allTransactions.forEach(p => {
+          const key = p.Type === "Payment" ? (typeMap[p.PaymentTypeId] || "Unknown") : "Refund";
+          summary[key] = (summary[key] || 0) + Number(p.Amount);
         });
 
-        // --- Isi tabel ringkasan ---
-        const sumBody = document.getElementById("summary");
-        sumBody.innerHTML = "";
-
-        ["Cash", "Hutang", "Transfer", "TOTAL"].forEach(m => {
-          const row = document.createElement("tr");
-          row.innerHTML = `
-            <td class="p-2 border-b font-semibold">${m}</td>
-            <td class="p-2 border-b">${summaryData[m].count}</td>
-            <td class="p-2 border-b">Rp ${summaryData[m].total.toLocaleString("id-ID")}</td>
+        const summaryTbody = document.getElementById("summary");
+        summaryTbody.innerHTML = "";
+        Object.entries(summary).forEach(([k,v]) => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td class="p-2 border-b">${k}</td>
+            <td class="p-2 border-b">Rp ${v.toLocaleString("id-ID")}</td>
           `;
-          sumBody.appendChild(row);
+          summaryTbody.appendChild(tr);
         });
 
       } catch (err) {
